--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 					addToBook(tpc,converter.makeHtml(page));
 					i+=1;
 				}
+				status.textContent = "Done!";
 			}
 			
 			async function generateResponse(prompt, depth) {
@@ -246,7 +247,7 @@
 					<div id="textgohere" class="content1" id="content1">The contents of your book will appear here!</div>
 					<div class="content2" id="chat">
 						<div id="chatgohere">
-							WIP! Conversation and elaboration features coming soon.
+							Pretty UI coming soon! Try sending a message.
 						</div>
 						<br>
 						<div id="chatInputs">
