--- a/index.html
+++ b/index.html
@@ -417,9 +417,11 @@
 					</div>
 					<div class="content2" id="chat">
 						<div id="chatInputs">
-							<textarea rows="5" style="width: 80%; resize:none;" placeholder="Your question goes here!" id="chatInp"></textarea>
-							<br>
-							<button id="chatButton">Ask!</button>
+							<fieldset>
+								<textarea rows="5" style="width: 80%; resize:none;" placeholder="Your question goes here!" id="chatInp"></textarea>
+								<br>
+								<button id="chatButton">Ask!</button>
+							</fieldset>
 						</div>
 						<br>
 						<div id="chatgohere">
@@ -454,11 +456,11 @@
 						</fieldset>
 						<h2>Changelog</h2>
 						<ul>
-							<li>Improved Chat mode prompting. The program now has access to the full textbook when answering chat questions.</li>
-							<li>The tooltip will now appear when highlighting text in the Chat menu</li>
-							<li>Minor UI revisions</li>
+							<li><b>Tone settings!</b> You can now customize how the program writes.</li>
+							<li><b>Code highlighting!</b> Code now syntax-highlights as it's displayed on the screen.</li>
+							<li>Further CSS changes, less elements should overflow.</li>
 						</ul>
-						<p>A.P. 9/03/2024</p>
+						<p>A.P. 9/04/2024</p>
 					</div>
 					
 					
