--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,7 @@ Make sure not to put a comma after the last question.`;
 						<br>
 						<h2>Changelog</h2>
 						<ul>
+							<li>A new "Why?" button appears next to incorrectly answered questions in the Pop Quiz menu.</li>
 							<li>Substantial QOL changes to improve the user experience.</li>
 							<li>Site layout has been changed to make certain settings easier to access.</li>
 							<li>Site layout has been changed to better retain consistency between pages.</li>
